force-app/main/default/objects/Property__c/Address__c.field-meta.xml
<CustomField xmlns='urn:metadata.tooling.soap.sforce.com' fqn='Property__c.Address__c'>
  <fullName>Address__c</fullName>
  <label>Address</label>
  <length>100</length>
  <type>Text</type>
</CustomField>