force-app/main/default/objects/Property__c/Baths__c.field-meta.xml
<CustomField xmlns='urn:metadata.tooling.soap.sforce.com' fqn='Property__c.Baths__c'>
  <fullName>Baths__c</fullName>
  <label>Baths</label>
  <precision>2</precision>
  <scale>0</scale>
  <type>Number</type>
</CustomField>