force-app/main/default/objects/Property__c/Beds__c.field-meta.xml
<CustomField xmlns='urn:metadata.tooling.soap.sforce.com' fqn='Property__c.Beds__c'>
  <fullName>Beds__c</fullName>
  <label>Beds</label>
  <precision>2</precision>
  <scale>0</scale>
  <type>Number</type>
</CustomField>