force-app/main/default/objects/Property__c/Broker__c.field-meta.xml
<CustomField xmlns='urn:metadata.tooling.soap.sforce.com' fqn='Property__c.Broker__c'>
  <fullName>Broker__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Broker</label>
  <referenceTo>Broker__c</referenceTo>
  <relationshipLabel>Properties</relationshipLabel>
  <relationshipName>Properties</relationshipName>
  <type>Lookup</type>
</CustomField>