force-app/main/default/objects/Property__c/City__c.field-meta.xml
<CustomField xmlns='urn:metadata.tooling.soap.sforce.com' fqn='Property__c.City__c'>
  <fullName>City__c</fullName>
  <label>City</label>
  <length>50</length>
  <type>Text</type>
</CustomField>