force-app/main/default/objects/Property__c/Description__c.field-meta.xml
<CustomField xmlns='urn:metadata.tooling.soap.sforce.com' fqn='Property__c.Description__c'>
  <fullName>Description__c</fullName>
  <label>Description</label>
  <length>500</length>
  <type>LongTextArea</type>
</CustomField>