force-app/main/default/objects/Property__c/Location__c.field-meta.xml
<CustomField xmlns='urn:metadata.tooling.soap.sforce.com' fqn='Property__c.Location__c'>
  <fullName>Location__c</fullName>
  <label>Location</label>
  <scale>7</scale>
  <type>Location</type>
</CustomField>