force-app/main/default/objects/Property__c/Picture__c.field-meta.xml
<CustomField xmlns='urn:metadata.tooling.soap.sforce.com' fqn='Property__c.Picture__c'>
  <fullName>Picture__c</fullName>
  <label>Picture</label>
  <type>Url</type>
</CustomField>