force-app/main/default/objects/Property__c/Picture_IMG__c.field-meta.xml
<CustomField xmlns='urn:metadata.tooling.soap.sforce.com' fqn='Property__c.Picture_IMG__c'>
  <fullName>Picture_IMG__c</fullName>
  <formula>if(ISBLANK(Picture__c), &apos;&apos;, IMAGE(Picture__c, &quot;Picture&quot;, 400, 400))</formula>
  <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
  <label>Main Picture</label>
  <type>Text</type>
</CustomField>