force-app/main/default/objects/Property__c/Price__c.field-meta.xml
<CustomField xmlns='urn:metadata.tooling.soap.sforce.com' fqn='Property__c.Price__c'>
  <fullName>Price__c</fullName>
  <label>Price</label>
  <precision>8</precision>
  <scale>0</scale>
  <type>Currency</type>
</CustomField>