force-app/main/default/objects/Property__c/Record_Link__c.field-meta.xml
<CustomField xmlns='urn:metadata.tooling.soap.sforce.com' fqn='Property__c.Record_Link__c'>
  <fullName>Record_Link__c</fullName>
  <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+ Id</formula>
  <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
  <label>Record Link</label>
  <type>Text</type>
</CustomField>