force-app/main/default/objects/Property__c/State__c.field-meta.xml
<CustomField xmlns='urn:metadata.tooling.soap.sforce.com' fqn='Property__c.State__c'>
  <fullName>State__c</fullName>
  <label>State</label>
  <length>20</length>
  <type>Text</type>
</CustomField>