force-app/main/default/objects/Property__c/Status__c.field-meta.xml
<CustomField xmlns='urn:metadata.tooling.soap.sforce.com' fqn='Property__c.Status__c'>
  <fullName>Status__c</fullName>
  <label>Status</label>
  <picklist>
    <picklistValues>
      <fullName>Available</fullName>
    </picklistValues>
    <picklistValues>
      <fullName>Under agreement</fullName>
    </picklistValues>
    <picklistValues>
      <fullName>Sold</fullName>
    </picklistValues>
  </picklist>
  <type>Picklist</type>
</CustomField>