force-app/main/default/objects/Property__c/Thumbnail__c.field-meta.xml
<CustomField xmlns='urn:metadata.tooling.soap.sforce.com' fqn='Property__c.Thumbnail__c'>
  <fullName>Thumbnail__c</fullName>
  <label>Thumbnail</label>
  <type>Url</type>
</CustomField>