force-app/main/default/objects/Property__c/Thumbnail_IMG__c.field-meta.xml
<CustomField xmlns='urn:metadata.tooling.soap.sforce.com' fqn='Property__c.Thumbnail_IMG__c'>
  <fullName>Thumbnail_IMG__c</fullName>
  <formula>if(ISBLANK(Thumbnail__c), &quot;&quot;, IMAGE(Thumbnail__c, &quot;Picture&quot;, 200, 200))</formula>
  <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
  <label>Main Thumbnail</label>
  <type>Text</type>
</CustomField>