force-app/main/default/objects/Property__c/Title__c.field-meta.xml
<CustomField xmlns='urn:metadata.tooling.soap.sforce.com' fqn='Property__c.Title__c'>
  <fullName>Title__c</fullName>
  <label>Title</label>
  <length>100</length>
  <type>Text</type>
</CustomField>