force-app/main/default/objects/Property__c/Zip__c.field-meta.xml
<CustomField xmlns='urn:metadata.tooling.soap.sforce.com' fqn='Property__c.Zip__c'>
  <fullName>Zip__c</fullName>
  <label>Zip</label>
  <length>10</length>
  <type>Text</type>
</CustomField>