force-app/main/default/objects/Property__c/All.listview-meta.xml
<ListView xmlns='urn:metadata.tooling.soap.sforce.com' fqn='Property__c.All'>
  <fullName>All</fullName>
  <columns>NAME</columns>
  <columns>City__c</columns>
  <columns>Beds__c</columns>
  <columns>Price__c</columns>
  <filterScope>Everything</filterScope>
  <label>All</label>
</ListView>